# cancellation_simulation

./: .gitignore  CMakeLists.txt  README.md
post-processing/data/: benchmark.json  interval.csv  output.csv  output2.csv  output3.csv  output4.csv  output5.csv  output_20.csv  output_atom.csv  output_enum.csv  output_long.csv  output_one_node.csv  output_one_node1.csv  output_short.csv  output_short2.csv  output_this.csv
post-processing/data/mongo/: mongo_exec.txt  mongo_exec_fct_exchg.txt
post-processing/python/: cancel_registering.csv  cleanup.csv  complete_execution_time.csv  exec_time.csv  exec_time_from_json.csv  execution_json.py  mongo_trim.py  trim.py
post-processing/r/: .RData  .Rhistory  delta_table.R  foo.csv
src/: CMakeLists.txt  CancelType.hpp  main.cpp
src/benchmark/: CancelCheckpointRegistry.cpp
src/cancellation/: CMakeLists.txt  CancelType.hpp  CleanupType.hpp  ToString.hpp
src/cancellation/benchmark/: Benchmark.hpp  CMakeLists.txt  CancelCheckpointRegistry.cpp  CancelCheckpointRegistry.hpp  Column.hpp  Position.hpp  Printer.hpp  Suite.hpp  Test.hpp  ToString.hpp
src/cancellation/benchmark/csv/: Printer.hpp  Table.hpp
src/cancellation/query/: Context.hpp  Exception.hpp
src/cancellation/time_benchmark/: Benchmark.hpp  CMakeLists.txt  CancelCheckpointRegistry.cpp  CancelCheckpointRegistry.hpp  Column.hpp  Suite.hpp  Test.hpp  ToString.hpp
src/cancellation/time_benchmark/csv/: Printer.hpp  Table.hpp
src/cancellation/time_benchmark/google_benchmark/: CMakeLists.txt  ExecutionBenchmark.cpp
src/cancellation/tree/: Builder.hpp  InnerNode.hpp  InnerNodeImpl.hpp  LeafNode.hpp  LeafNodeImpl.hpp  Node.hpp
src/cancellation/util/: CMakeLists.txt  CheckReturnValue.hpp  Clock.cpp  Clock.hpp  ExceptionReturnValue.hpp  ExecutionReturnValue.hpp  Impl.hpp  Status.hpp  ToString.hpp  Visitor.hpp
src/different_compilation_unit/: CMakeLists.txt  CancelFunctions.cpp  CancelFunctions.hpp
src/tree/: Builder.hpp  InnerNode.hpp  InnerNodeImpl.hpp  LeafNode.hpp  LeafNodeImpl.hpp
